[metadata]
name = RPCDaemon
author = Evan Callicoat
author-email = apsu@propter.net
url = http://github.com/Apsu/rpcdaemon
summary = AMQP RPC daemon for Quantum Agent HA
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    rpcdaemon
data_files =
    etc = rpcdaemon.conf

[entry_points]
console_scripts =
    rpcdaemon = rpcdaemon:main
